--- a/sse-build-resources.vcxproj.filters
+++ b/sse-build-resources.vcxproj.filters
@@ -437,5 +437,6 @@
       <Filter>skse64</Filter>
     </None>
     <None Include="README.md" />
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
