--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -75,6 +75,7 @@
     <ClInclude Include="ext\ILogging.h" />
     <ClInclude Include="ext\IMisc.h" />
     <ClInclude Include="ext\INIReader.h" />
+    <ClInclude Include="ext\IRandom.h" />
     <ClInclude Include="ext\ITasks.h" />
     <ClInclude Include="ext\JITASM.h" />
     <ClInclude Include="ext\Math.h" />
@@ -86,7 +87,6 @@
     <ClInclude Include="ext\STL.h" />
     <ClInclude Include="ext\StrHelpers.h" />
     <ClInclude Include="ext\versiondb.h" />
-    <ClInclude Include="IRandom.h" />
     <ClInclude Include="skse64\skse64\skse64\BSModelDB.h" />
     <ClInclude Include="skse64\skse64\skse64\GameAPI.h" />
     <ClInclude Include="skse64\skse64\skse64\GameBSExtraData.h" />
