--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -76,7 +76,10 @@
     <ClInclude Include="ext\ILogging.h" />
     <ClInclude Include="ext\IMisc.h" />
     <ClInclude Include="ext\INIReader.h" />
+    <ClInclude Include="ext\IOS.h" />
     <ClInclude Include="ext\IRandom.h" />
+    <ClInclude Include="ext\ISettingCollection.h" />
+    <ClInclude Include="ext\ISKSE.h" />
     <ClInclude Include="ext\ITasks.h" />
     <ClInclude Include="ext\JITASM.h" />
     <ClInclude Include="ext\Math.h" />
@@ -153,12 +156,15 @@
     <ClCompile Include="ext\IHook.cpp" />
     <ClCompile Include="ext\ILogging.cpp" />
     <ClCompile Include="ext\INIReader.cpp" />
+    <ClCompile Include="ext\IOS.cpp" />
+    <ClCompile Include="ext\ISKSE.cpp" />
     <ClCompile Include="ext\ITasks.cpp" />
     <ClCompile Include="ext\JITASM.cpp" />
     <ClCompile Include="ext\Mem.cpp" />
     <ClCompile Include="ext\Patching.cpp" />
     <ClCompile Include="ext\PerfCounter.cpp" />
     <ClCompile Include="ext\RTTI.cpp" />
+    <ClCompile Include="ext\StrHelpers.cpp" />
     <ClCompile Include="ext\Threads.cpp" />
     <ClCompile Include="skse64\skse64\skse64\BSModelDB.cpp" />
     <ClCompile Include="skse64\skse64\skse64\GameAPI.cpp" />
