--- a/sse-build-resources.vcxproj
+++ b/sse-build-resources.vcxproj
@@ -85,17 +85,20 @@
     <ClInclude Include="ext\IRandom.h" />
     <ClInclude Include="ext\ISettingCollection.h" />
     <ClInclude Include="ext\ISKSE.h" />
+    <ClInclude Include="ext\ITaskPool.h" />
     <ClInclude Include="ext\ITasks.h" />
     <ClInclude Include="ext\Iteration.h" />
     <ClInclude Include="ext\JITASM.h" />
     <ClInclude Include="ext\Math.h" />
     <ClInclude Include="ext\Mem.h" />
+    <ClInclude Include="ext\Model.h" />
     <ClInclude Include="ext\Patching.h" />
     <ClInclude Include="ext\PerfCounter.h" />
     <ClInclude Include="ext\PW.h" />
     <ClInclude Include="ext\RTTI.h" />
     <ClInclude Include="ext\STL.h" />
     <ClInclude Include="ext\STLCommon.h" />
+    <ClInclude Include="ext\Stream.h" />
     <ClInclude Include="ext\StrHelpers.h" />
     <ClInclude Include="ext\Threads.h" />
     <ClInclude Include="ext\versiondb.h" />
@@ -166,12 +169,15 @@
     <ClCompile Include="ext\INIReader.cpp" />
     <ClCompile Include="ext\IOS.cpp" />
     <ClCompile Include="ext\ISKSE.cpp" />
+    <ClCompile Include="ext\ITaskPool.cpp" />
     <ClCompile Include="ext\ITasks.cpp" />
     <ClCompile Include="ext\JITASM.cpp" />
     <ClCompile Include="ext\Mem.cpp" />
+    <ClCompile Include="ext\Model.cpp" />
     <ClCompile Include="ext\Patching.cpp" />
     <ClCompile Include="ext\PerfCounter.cpp" />
     <ClCompile Include="ext\RTTI.cpp" />
+    <ClCompile Include="ext\Stream.cpp" />
     <ClCompile Include="ext\StrHelpers.cpp" />
     <ClCompile Include="ext\Threads.cpp" />
     <ClCompile Include="skse64\skse64\skse64\BSModelDB.cpp" />
